--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-             xmlns:helpers="clr-namespace:VCenterMigrationTool.Helpers"
+             xmlns:settingsViewModels="clr-namespace:VCenterMigrationTool.ViewModels.Settings"
+             xmlns:settingsViews="clr-namespace:VCenterMigrationTool.Views.Pages.Settings"
              DispatcherUnhandledException="OnDispatcherUnhandledException"
              Exit="OnExit"
              Startup="OnStartup">
@@ -12,19 +13,23 @@
                 <ui:ThemesDictionary Theme="Dark" />
                 <ui:ControlsDictionary />
             </ResourceDictionary.MergedDictionaries>
-            <!-- Custom color overrides for dark theme -->
-            <SolidColorBrush x:Key="TextFillColorPrimaryBrush" Color="#00BFFF" />
-            <SolidColorBrush x:Key="TextFillColorSecondaryBrush" Color="#87CEEB" />
 
-            <helpers:EnumToBooleanConverter x:Key="EnumToBooleanConverter" />
-            <helpers:BoolToStringConverter x:Key="BoolToStringConverter" />
-            <helpers:NullToBoolConverter x:Key="NullToBoolConverter" />
-            <helpers:BoolToSymbolConverter x:Key="BoolToSymbolConverter" />
-            <helpers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
-            <helpers:EnumToVisibilityConverter x:Key="EnumToVisibilityConverter" />
-            <helpers:EnumToIconConverter x:Key="EnumToIconConverter" />
-            <helpers:BoolToParameterConverter x:Key="BoolToParameterConverter" />
-            <helpers:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
+            <DataTemplate DataType="{x:Type settingsViewModels:AppearanceSettingsViewModel}">
+                <settingsViews:AppearanceSettingsView />
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type settingsViewModels:PowerShellSettingsViewModel}">
+                <settingsViews:PowerShellSettingsView />
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type settingsViewModels:FilePathsSettingsViewModel}">
+                <settingsViews:FilePathsSettingsView />
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type settingsViewModels:ViewProfilesViewModel}">
+                <settingsViews:ViewProfilesView />
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type settingsViewModels:ProfileEditorViewModel}">
+                <settingsViews:ProfileEditorView />
+            </DataTemplate>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
